junit changes